update & new files

--- a/src/main/resources/assets/bloomery/lang/en_us.json
+++ b/src/main/resources/assets/bloomery/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.bloomery.boxed_glass": "Boxed Glass",
   "block.bloomery.deepslate_steel_ore": "Deepslate Steel Ore",
+  "block.bloomery.grate": "Steel Grate",
   "item.bloomery.raw_steel": "Raw Steel",
   "item.bloomery.steel_ingot": "Steel Ingot",
   "item.bloomery.steel_apple": "Steel Apple",
