--- a/src/main/resources/assets/bloomery/lang/en_us.json
+++ b/src/main/resources/assets/bloomery/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.bloomery.elementite_smithing_template": "Elementite Smithing Template",
   "item.bloomery.aeroblade": "Aeroblade",
   "item.bloomery.crystal_meth": "Crystal of Methamphetamine",
+  "item.bloomery.butter": "Butter",
   "block.bloomery.steel_block": "Block of Steel",
   "block.bloomery.raw_steel_block": "Block of Raw Steel",
   "block.bloomery.test": "feriblokk 💀",
